--- a/FoxSDC_Agent_UI/FoxSDC_Agent_UI.csproj
+++ b/FoxSDC_Agent_UI/FoxSDC_Agent_UI.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Branding.cs">
+      <Link>Branding.cs</Link>
+    </Compile>
     <Compile Include="About.cs">
       <SubType>Form</SubType>
     </Compile>
