--- a/FoxSDC_RemoteConnect/FoxSDC_RemoteConnect.csproj
+++ b/FoxSDC_RemoteConnect/FoxSDC_RemoteConnect.csproj
@@ -37,7 +37,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Fox.ico</ApplicationIcon>
+    <ApplicationIcon>Vulpes Network.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Fox.ico" />
+    <Content Include="Vulpes Network.ico" />
     <None Include="Resources\Help.ico" />
     <None Include="Resources\NetNotCon.ico" />
     <None Include="Resources\NetCon.ico" />
