--- a/FoxSDC_Server/FoxSDC_Server.csproj
+++ b/FoxSDC_Server/FoxSDC_Server.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Modules\Startups.cs" />
     <Compile Include="Modules\WindowsUsersData.cs" />
     <Compile Include="Modules\UsersMGMT.cs" />
+    <Compile Include="Modules\PortMappingServer.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -141,9 +142,7 @@
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Pushes\RemoteNetworkConnectionLegacy.cs" />
     <Compile Include="Pushes\RemoteNetworkConnectionWS.cs" />
-    <Compile Include="Pushes\Screendata.cs" />
     <Compile Include="Pushes\ScreendataWS.cs" />
     <Compile Include="Pushes\Services.cs" />
     <Compile Include="Pushes\StdIO.cs" />
@@ -227,7 +226,7 @@
     <PreBuildEvent>"$(TargetDir)FoxSDC_AutoVersion.exe" "$(ProjectDir)AutoVersion.cs" "FoxSDC_Server"</PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>REM copy "$(SolutionDir)Test Lic.lic" "$(TargetDir)License.lic"</PostBuildEvent>
+    <PostBuildEvent>copy "$(SolutionDir)Test Lic.lic" "$(TargetDir)License.lic"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
